Install React and add Mint page

--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -6,16 +6,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mint</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
 </head>
 
 <body>
-    <div>Minting Page</div>
+    <div id="root">Minting Page</div>
+    <script type="module" src="/src/MintMain.tsx"></script>
 </body>
 
 </html>
