--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Phaser + TS</title>
+    <link href="/src/styles.css" rel="stylesheet">
+    <title>Aetheria - Start Your Adventure</title>
     <style>
         * {
             margin: 0;
