--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet">
     <title>Aetheria - Mint Your Avatar</title>
 </head>
 
 <body>
-    <div id="root">Minting Page</div>
+    <div id="root"></div>
     <script type="module" src="/src/MintMain.tsx"></script>
 </body>
 
