--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Aetheria - Start Your Adventure" />
+    <meta property="og:description"
+        content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image:height" content="1024" />
+    <meta property="og:image:width" content="1536" />
+    <meta property="og:url" content="https://tryaetheria.xyz" />
+    <meta property="og:type" content="website" />
     <link href="/src/styles.css" rel="stylesheet">
     <title>Aetheria - Mint Your Avatar</title>
 </head>
