Add twitter cards and chagne size of opengraph iamge

--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -11,6 +11,9 @@
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:url" content="https://tryaetheria.xyz" />
     <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aetheria - Start Your Adventure" />
+    <meta name="twitter:description" content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
     <link href="/src/styles.css" rel="stylesheet">
     <title>Aetheria - Mint Your Avatar</title>
 </head>
