--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Aetheria - Start Your Adventure" />
+    <meta property="og:title" content="Aetheria - Mint Your Avatar" />
     <meta property="og:description"
         content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
     <meta property="og:image" content="/og-image.png" />
