--- a/frontend/mint/index.html
+++ b/frontend/mint/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://tryaetheria.xyz" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Aetheria - Start Your Adventure" />
+    <meta name="twitter:title" content="Aetheria - Mint Your Avatar" />
     <meta name="twitter:description" content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
     <link href="/src/styles.css" rel="stylesheet">
     <title>Aetheria - Mint Your Avatar</title>
