--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,30 +5,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Aetheria - Start Your Adventure" />
-    <meta property="og:description" content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
+    <meta property="og:title" content="Aetheria - Mint Your Avatar" />
+    <meta property="og:description"
+        content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:url" content="https://tryaetheria.xyz" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Aetheria - Start Your Adventure" />
+    <meta name="twitter:title" content="Aetheria - Mint Your Avatar" />
     <meta name="twitter:description" content="Join the Aetheria adventure and explore a Gamified Web3 Learning Experience." />
-
-
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Aetheria - Start Your Adventure</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            background-color: black;
-        }
-    </style>
+    <title>Aetheria - Mint Your Avatar</title>
 </head>
 
 <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/MintMain.tsx"></script>
 </body>
 
 </html>
